update attemps and stars
